# pokemon-red-RL

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
resources/: pokemon-red.gb.state
resources/processed_map/: BikeShop.py  BillsHouse.py  BluesHouse.py  CeladonGym.py  CeladonHotel.py  CeladonMansion2F.py  CeladonMansionRoofHouse.py  CeruleanGym.py  CinnabarGym.py  CinnabarLabFossilRoom.py  Colosseum.py  FightingDojo.py  FuchsiaGym.py  GameCorner.py  IndigoPlateauLobby.py  MrFujisHouse.py  OaksLab.py  PewterGym.py  PewterPokecenter.py  PokemonMansion1F.py  PokemonMansion2F.py  PokemonMansion3F.py  PokemonMansionB1F.py  RedsHouse2F.py  Route15Gate2F.py  SSAnneKitchen.py  SafariZoneEastRestHouse.py  SaffronGym.py  SilphCo11F.py  VermilionGym.py  ViridianGym.py  ViridianSchoolHouse.py
scripts/: inference.sh  train.sh
src/: baseline_fast_v2.py  config.py  global_map.py  go_forever.sh  inference.py  monitor.py  red_gym_env.py  red_gym_env_v2.py  run_pretrained_interactive.py  train_agent.py
src/pokemon_red_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
